# honeycomb

./: .babelrc.js  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .firebaserc  .gitignore  .npmrc  .prettierignore  .prettierrc.js  0e384e19.2e65628c.js  0e384e19.41e742b6.js  0e384e19.47fad563.js  0e384e19.884322d4.js  0e384e19.95eca0a6.js  0e384e19.b0358caf.js  0e384e19.ebd38f28.js  0e384e19.fe32fedc.js  0f062792.0dfe36d3.js  0f062792.136da006.js  0f062792.4b80aae3.js  0f062792.5a8c2ad4.js  0f062792.5e7a41c3.js  0f062792.8f11e18f.js  0f062792.945c9bbd.js  0f062792.9a14508d.js  0f062792.a03aea95.js  1.c43d70de.js  126f319d.0d5ec3e7.js  126f319d.19bf4623.js  126f319d.517f1c75.js  126f319d.57d22cac.js  126f319d.5b6168b1.js  126f319d.8a436cc6.js  126f319d.a8a934a7.js  126f319d.ca1d9201.js  126f319d.cec152c9.js  126f319d.d684ceb6.js  16.6903bfde.js  17.fe7e5b70.js  (+196 more)
.devcontainer/: devcontainer.json
blog/: atom.xml  rss.xml
config/: saveData.js  version.json  vite.main.config.js
dependencies/: Brewfile  chocolatey.config
docs/: index.html
electron/: main.js
emulator_data/: firebase-export-metadata.json
env/: .env.clinic  .env.dev.clinic  .env.dev.home  .env.dev.online  .env.equipment  .env.firebase  .env.firebase-download  .env.home  .env.production.clinic  .env.production.home  .env.production.online  .env.turk-prolific  .env.video  .new-env.dev.clinic  .new-env.dev.home
lib/: psiturk.js
psiturkit/: psiturk-it  pyproject.toml
public/: electron.js  electron.main.js  electron.preload.js  electron.renderer.js  index.html  manifest.json
src/: App.css  (+14 more)
(+323 files in other folders)
