[tool.poetry]
name = "psiturkit"
version = "0.1.0"
description = "Build psiturk project from jspsych task."
authors = ["fernandogelin <fernandogelin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
psiturk = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
